tests/error/array_errors/mutate.err
Error: Unsupported (at $FILE:11:4)
   | 
 9 | @guppy(module)
10 | def main(xs: array[int, 10]) -> None:
11 |     xs[0] = 1
   |     ^^^^^ Subscript assignments are not supported

Guppy compilation failed due to 1 previous error
